안드로이드 프로젝트입니다

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -16,7 +16,64 @@
             android:name=".bestListActivity"
             android:exported="false" />
         <activity
+            android:name=".std1Activity"
+            android:exported="false" />
+        <activity
+            android:name=".std2Activity"
+            android:exported="false" />
+        <activity
+            android:name=".std3Activity"
+            android:exported="false" />
+        <activity
             android:name=".std4Activity"
+            android:exported="false" />
+        <activity
+            android:name=".std5Activity"
+            android:exported="false" />
+        <activity
+            android:name=".std6Activity"
+            android:exported="false" />
+        <activity
+            android:name=".std7Activity"
+            android:exported="false" />
+        <activity
+            android:name=".std8Activity"
+            android:exported="false" />
+        <activity
+            android:name=".std9Activity"
+            android:exported="false" />
+        <activity
+            android:name=".std10Activity"
+            android:exported="false" />
+        <activity
+            android:name=".best1Activity"
+            android:exported="false" />
+        <activity
+            android:name=".best2Activity"
+            android:exported="false" />
+        <activity
+            android:name=".best3Activity"
+            android:exported="false" />
+        <activity
+            android:name=".best4Activity"
+            android:exported="false" />
+        <activity
+            android:name=".best5Activity"
+            android:exported="false" />
+        <activity
+            android:name=".best6Activity"
+            android:exported="false" />
+        <activity
+            android:name=".best7Activity"
+            android:exported="false" />
+        <activity
+            android:name=".best8Activity"
+            android:exported="false" />
+        <activity
+            android:name=".best9Activity"
+            android:exported="false" />
+        <activity
+            android:name=".best10Activity"
             android:exported="false" />
         <activity
             android:name=".MenuActivity"
